Fix orders page search issue
