# server/swagger/orders.yaml
@@ -10,6 +10,65 @@ paths:
       produces:
       - "application/json"
       parameters:
+      - name: "model"
+        in: "query"
+        description: "Query for Products with same modelId"
+        type: "array"
+        uniqueItems: true
+        items:
+          type: "string"
+      - name: "color"
+        in: "query"
+        description: "Query for Products with same color"
+        type: "array"
+        uniqueItems: true
+        items:
+          type: "string"
+      - name: "username"
+        in: "query"
+        description: "Query for Products with same username"
+        type: "string"
+      - name: "email"
+        in: "query"
+        description: "Query for Products with same email"
+        type: "string"
+      - name: "variant"
+        in: "query"
+        description: "Query for Products with same variant"
+        type: "string"
+      - name: "companyName"
+        in: "query"
+        description: "Query for Products with same companyName"
+        type: "string"
+      - name: "cvr"
+        in: "query"
+        description: "Query for Products with same cvr"
+        type: "string"
+      - name: "companyIndustry"
+        in: "query"
+        description: "Query for Products with same companyIndustry"
+        type: "array"
+        items:
+          type: "string"
+      - name: "numberOfEmployees"
+        in: "query"
+        description: "Query for Products with same numberOfEmployees"
+        type: "array"
+        items:
+          type: "string"
+      - name: "monthlyPrice"
+        in: "query"
+        description: "Query for Products with same year"
+        type: "array"
+        items:
+          type: "integer"
+      - name: "status"
+        in: "query"
+        description: "Query for Products with same status"
+        type: "array"
+        uniqueItems: true
+        items:
+          type: "string"
       - name: "limit"
         in: "query"
         description: "Limit the number of returned results"
